# ML_from_scratch

./: README.md  pyproject.toml  requirements.txt
experiments/decision_trees/: diabetes_experiment.py  iris_experiment.py
experiments/knn/: california_housing_experiment.py  iris_experiment.py
experiments/linear_regression/: california_housing_experiment.py
experiments/logistic_regression/: breast_cancer_experiment.py
src/ml_from_scratch.egg-info/: PKG-INFO  SOURCES.txt
src/ml_from_scratch/linear_models/: linear_regression.py  logistic_regression.py
src/ml_from_scratch/metrics/: classification.py  regression.py
src/ml_from_scratch/neighbors/: knn_classifier.py  knn_regressor.py
src/ml_from_scratch/trees/: decision_tree_classifier.py  decision_tree_regressor.py
src/ml_from_scratch/utils/: utils.py
