[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-from-scratch"
version = "0.1.0"
description = "Machine learning algorithms implemented from scratch with NumPy."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "jupyter",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]